--- a/Blazor/Blazor.csproj
+++ b/Blazor/Blazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Blazor.Bootstrap" Version="3.2.0" />
+    <PackageReference Include="BlazorMonaco" Version="3.3.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Npgsql" Version="9.0.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
@@ -18,7 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain Models\Domain Models.csproj" />
-    <ProjectReference Include="..\H1-Projekt.ServiceDefaults\H1-Projekt.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\H1-Projekt.ServiceDefaults\PostgreSQL.ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
